# java-modernization-assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  migration-plan.json  pyproject.toml  requirements.txt  setup.py
GUI-based-Algorithm-Calculator/: pom.xml
scripts/: install_emt4j.sh  run.sh
src/analyzer/: emt4j_wrapper.py
src/api/: main.py
src/cli/: commands.py
src/models/: analysis.py  migration_plan.py  transformation.py
src/planner/: ai_planner.py
src/transformer/: openrewrite_wrapper.py
src/utils/: config.py  file_utils.py  logging_config.py
src/validator/: compilation_validator.py
tests/: conftest.py  test_analyzer.py  test_planner.py
